fixed: modify UI, text overflow

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -97,7 +97,6 @@
 
 .main__top1-card-body {
     height : 300px;
-    width : 950px;
     height: 300px;
     display:flex;
     justify-content:center;
@@ -202,6 +201,7 @@
 
 .main-Top1-Body-card-text-box {
     display: flex;
+    overflow: auto;
     justify-content: center;
     font-size : 20px;
     font-weight : 10;
